hphp/hack/test/typecheck/reified_generics/type_constants_across.php.exp
File "type_constants_across.php", line 11, characters 10-17:
Invalid "as" expression hint (Typing[4195])
  File "type_constants_across.php", line 11, characters 10-17:
  The "as" operator cannot be used with the abstract type constant Tx because it is not marked <<__Enforceable>>
File "type_constants_across.php", line 14, characters 10-18:
Invalid "as" expression hint (Typing[4195])
  File "type_constants_across.php", line 14, characters 10-18:
  The "as" operator cannot be used with a type with an erased generic type argument
